# news-sentiment-analyzer

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  Dockerfile.dev  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
app/: __init__.py  app.py
app/application/services/: clustering_service.py  health_service.py  sentiment_service.py
app/core/: exception_handlers.py  logging.py
app/core/config/: __init__.py  app.py  cors.py  database.py  nats.py  sentry.py  settings.py
app/core/di/: __init__.py  containers.py
app/domain/: __init__.py  exceptions.py
app/domain/interfaces/messaging/: __init__.py  message_handler.py  rpc_message_handler.py
app/domain/interfaces/repository/: repository.py
app/domain/interfaces/services/: __init__.py  be_data_rpc_client.py
app/domain/interfaces/uow/: __init__.py  unit_of_work.py
app/domain/models/: news.py
app/infrastructure/messaging/: be_data_rpc_client.py  nats_base_rpc_client.py  nats_rpc_server.py  rpc_message_handler.py
app/infrastructure/persistence/: base_repository.py  database.py  sqlalchemy_unit_of_work.py
app/infrastructure/persistence/models/: mixins.py
app/interfaces/api/routes/: __init__.py  base.py  health.py  router.py
app/interfaces/api/schemas/: responses.py
app/interfaces/cli/: demo.py
data/: sample_news.json
docs/: ARCHITECTURE.md  CAPACITY.md
migrations/: env.py
prompts/: postgres_tx_fixer.md
tests/: conftest.py
tests/integration/: conftest.py  test_base_api.py  test_health_api.py
tests/unit/: test_be_data_rpc_client.py  test_clustering_service.py  test_health_service.py  test_nats_rpc_server.py  test_rpc_message_handler.py  test_sentiment_service.py
